# ffmpegParser

./: CMakeLists.txt  README.md  doctest_main.cpp  parser_cli.cpp  parser_test.cpp
lib/include/: parser.h
lib/src/: bad_parameter_config  bad_parameter_options  config.txt  global_options  graph_checker.cpp  graph_convert.cpp  graph_refactor.cpp  parser.cpp
